--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-modal": "^3.15.1",
-    "react-toastify": "^9.0.8"
+    "react-toastify": "^9.0.8",
+    "tailwind-scrollbar": "^2.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.12",
