--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-modal": "^3.15.1",
+    "react-stripe-checkout": "^2.6.3",
     "react-toastify": "^9.0.8",
-    "tailwind-scrollbar": "^2.0.1"
+    "stripe": "^10.12.0",
+    "tailwind-scrollbar": "^2.0.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.12",
